http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulacrum
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: simulacrum
subsets:
- addresses:
  # list all external ips for this service
  - ip: 192.168.1.50
  ports:
  - name: default
    port: 80
    protocol: TCP
