http/atlantis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis
  namespace: atlantis
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "atlantis.qtosw.com"
      secretName: letsencrypt-atlantis
  rules:
  - host: atlantis.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: atlantis
            port:
              number: 4141
