http/ingress-kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kiali-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "kiali.qtosw.com"
      secretName: letsencrypt-kiali
  rules:
  - host: kiali.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kiali
            port:
              number: 9090
