http/ingress-n8n.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    linkerd.io/inject: enabled
    cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: n8n-credentials
    #nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "n8n.qtosw.com"
      secretName: letsencrypt-n8n
  rules:
  - host: n8n.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: n8n
            port:
              number: 80
