http/ingress-scope.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scope
  namespace: weave
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: scope-credentials
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - "scope.qtosw.com"
      secretName: letsencrypt-scope
  rules:
  - host: scope.qtosw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weave-scope-app
            port:
              number: 80
